Use dropper control from membrane channels
Improved location for dot flow control
Fixed: make sure pipe top doesn't go below pipe bottom
Separated dots flow control from dropper
Fluid Flow: improved initial sensor locations
Made pipe curve continuously instead of linear
Moved spline computations from phetcommon to common/spline since it depends on Jama
Moved spline computations from energy-skate-park to phetcommon for reuse in fluid-pressure-and-flow
Added balloons
Simplified context interface for PressureSensor model
# 0.00.06 (46993) Dec 8, 2010
Fixed: Possible to deselect units radio buttons
Fixed: fluid color should change with density - fade to amber for honey, gray for gasoline.
Fixed: the first (zero) tick mark of the ruler should be at the very end, see #2604
Fixed: Ruler checkbox does not change selected when pressing ruler close button
Improved sensor nodes so they have an attached triangle tip pointing to the sensor hot spot
Moved velocity vector arrow behind the sensor triangle hot spot
Add a background to sensor nodes to make them look more sensory
Created class hierarchy for sensor nodes
Move value property into Sensor base class
Added units to velocity sensor, cleaned up VelocitySensorNode and PressureSensorNode
Added a "close" button to the ruler
Removed dropper "drop" button
Removed time readout
Moved pool height readout to the side
Removed phet logo from control panel based on CM's recommendation
Use phetcommon text for "reset all" string
Fixed: sensor nodes occluded by control panel
Fixed: Fluid Density button and associated control fall off left edge of play area
Added water tower and water drops
Factored out RelativeDragHandler
# 0.00.05 (46345) Nov 18, 2010
Fixed: Pipe top and bottom edges in wrong z-ordering
# 0.00.04 (46343) Nov 18, 2010
Fixed: Fluid density slider should change fluid color
Fixed: pipe grab handles can get dissociated from the mouse
Fixed: particles should fit within pipe